--- a/h5sign.html
+++ b/h5sign.html
@@ -1,378 +1,55 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<title>H5单手横屏操作(横屏)</title>
-		<style type="text/css">
-			html,body,.viewport{
-			    width: 100%;
-			    height: 100%;
-			    margin: 0;
-			    padding: 0;
-			    position: relative;
-			    overflow: hidden;
-			    font-family: Arial;
-			}
-			
-			.viewport{
-				width: 500%;
-				height: 100%;
-				display:-webkit-box ;
-				overflow: hidden;
-				backface-visibility: hidden;
-				position: relative;
-				-webkit-transform: translate3D(0,0,0);
-			}
-			.pageview{
-			    -webkit-box-flex: 1;
-			    width: 0;  
-			    background-position: center center; 
-			    background-size:cover; 
-			    background-repeat:no-repeat;
-					}
-			.pageview:nth-child(1){
-				background: black;
-				z-index: -1;
-			}
-			.pageview:nth-child(2){
-				background-image: url(img/d4.jpg);
-			}
-			.pageview:nth-child(3){
-				background-image: url(img/d3.jpg);
-			}
-			.pageview:nth-child(4){
-				background-image: url(img/d6.jpg);
-			}
-			.pageview:nth-child(5){
-				background-image: url(img/d1.jpg);
-			}
-		.pagenumber{
-		    display: -webkit-box;
-		    position: absolute;
-		    bottom: 2em;
-		    left: 35%;
-		    height: 2em;
-		    width: 30%;
-		}
-		.pagenumber div{
-		    -webkit-box-flex: 1;
-		    width: 0;
-		    position: relative;
-		}
-		.pagenumber .now:after {
-		    background: rgba(255,255,255,1);
-		}
-		.pagenumber div:after{
-		    content: "";
-		    width: 0.4em;
-		    height: 0.4em;
-		    background: rgba(255,255,255,0.5);
-		    border-radius: 2em;
-		    position: absolute;
-		    top: 50%;
-		    left: 50%;
-		    margin-top: -0.2em;
-		    margin-left: -0.2em;
-		}
-		h3{
-		    text-align: center;
-		    font-family: Microsoft YaHei,Arial;
-		    color: #fff;
-		    font-size: 1.7em;
-		    font-weight: normal;
-		    padding: 1em 0;
-		    margin: 0;
-		}
-		button{
-		    width: 40%;
-		    margin: auto;
-		    height: 3em;
-		    background: #fff6de;
-		    line-height: 3rem;
-		    color: #000;
-		    padding: 0;
-		    border: none;
-		    display: block;
-		}
-		@media screen and (max-width: 360px) {
-		    html,body{font-size: 15px}
-		}
-		@media screen and (min-width: 360px) and (max-width: 400px) {
-		    html,body{font-size: 16px}
-		}
-		@media screen and (min-width: 400px) and (max-width: 460px) {
-		    html,body{font-size: 18px}
-		}
-		@media screen and (min-width: 460px){
-		    html,body{font-size: 24px}
-		}
-		.pageview img{
-			width: 100%;
-			height: 100%;
-		}
-		.light1{
-			  z-index: 1000;
-		}
-		.light2{
-			  width: 50px;
-			  height: 50px;
-			 opacity: 0;
-			  position: absolute;
-			  top: 152px;
-			  left: 136px;
-			  
-			  -webkit-animation-name:'wobble';/*动画属性名，也就是我们前面keyframes定义的动画名*/
-		     -webkit-animation-duration: 3s;/*动画持续时间*/
-		     -webkit-animation-timing-function: ease-in-out; /*动画频率，和transition-timing-function是一样的*/
-		     -webkit-animation-iteration-count: infinite;
-		     -webkit-animation-direction: alternate;/*定义动画方式*/
-		}
-	.light2 img{
-		z-index: -1;
-	}
-		  @-webkit-keyframes 'wobble' {
-			      from {
-				      opacity: 0;
-				    }
-				    to {
-				      opacity: 1;
-				    }
-			  }
-		.light2 img{
-			 border-radius:50% ;
-		}
-		.con{
-			margin:0 auto;
-			height: 50px;
-			color: white;
-			position: absolute;
-			top: 240px;
-			left: 80px;
-			font-size:16px;
-			font-weight: bold;
-		}
-		.con span:nth-child(1){-webkit-animation:mov1 1s ease;}
-		.con span:nth-child(2){-webkit-animation:mov2 1s ease;}
-		.con span:nth-child(3){-webkit-animation:mov3 1s ease;}
-		.con span:nth-child(4){-webkit-animation:mov4 1s ease;}
-		.con span:nth-child(5){-webkit-animation:mov5 1s ease;}
-		.con span:nth-child(6){-webkit-animation:mov6 1s ease;}
-		.con span:nth-child(7){-webkit-animation:mov7 1s ease;}
-		.con span:nth-child(8){-webkit-animation:mov8 1s ease;}
-		@-webkit-keyframes mov1{
-			0%{-webkit-transform:translateY(0px);opacity:0;}
-			0%{-webkit-transform:translateY(-100px);opacity:0;}
-			30%{-webkit-transform:translateY(0px);opacity:1;}
-			100%{-webkit-transform:translateY(0px);opacity:1;}
-			}
-		@-webkit-keyframes mov2{
-			0%{-webkit-transform:translateY(0px);opacity:0;}
-			10%{-webkit-transform:translateY(-100px);opacity:0;}
-			40%{-webkit-transform:translateY(0px);opacity:1;}
-			100%{-webkit-transform:translateY(0px);opacity:1;}
-			}
-		@-webkit-keyframes mov3{
-			0%{-webkit-transform:translateY(0px);opacity:0;}
-			20%{-webkit-transform:translateY(-100px);opacity:0;}
-			50%{-webkit-transform:translateY(0px);opacity:1;}
-			100%{-webkit-transform:translateY(0px);opacity:1;}
-			}
-		@-webkit-keyframes mov4{
-			0%{-webkit-transform:translateY(0px);opacity:0;}
-			30%{-webkit-transform:translateY(-100px);opacity:0;}
-			60%{-webkit-transform:translateY(0px);opacity:1;}
-			100%{-webkit-transform:translateY(0px);opacity:1;}
-			}
-		@-webkit-keyframes mov5{
-			0%{-webkit-transform:translateY(0px);opacity:0;}
-			40%{-webkit-transform:translateY(-100px);opacity:0;}
-			70%{-webkit-transform:translateY(0px);opacity:1;}
-			100%{-webkit-transform:translateY(0px);opacity:1;}
-			}
-		@-webkit-keyframes mov6{
-			0%{-webkit-transform:translateY(0px);opacity:0;}
-			50%{-webkit-transform:translateY(-100px);opacity:0;}
-			80%{-webkit-transform:translateY(0px);opacity:1;}
-			100%{-webkit-transform:translateY(0px);opacity:1;}
-			}
-		@-webkit-keyframes mov7{
-			0%{-webkit-transform:translateY(0px);opacity:0;}
-			60%{-webkit-transform:translateY(-100px);opacity:0;}
-			90%{-webkit-transform:translateY(0px);opacity:1;}
-			100%{-webkit-transform:translateY(0px);opacity:1;}
-			}
-		@-webkit-keyframes mov8{
-			0%{-webkit-transform:translateY(0px);opacity:0;}
-			70%{-webkit-transform:translateY(-100px);opacity:0;}
-			90%{-webkit-transform:translateY(0px);opacity:1;}
-			100%{-webkit-transform:translateY(0px);opacity:1;}
-			}	
-		</style>
-	</head>
-	<body>
-		<div class="viewport" id="viewport">
-			<div class="pageview">
-				<div class="light1">
-					<img src="img/light1.png"/>
-				</div>
-				<div class="light2">
-					<img src="img/light2.png"/>
-				</div>
-				<section class="con">
-					<p>
-					<span>码</span>
-					<span>农</span>
-					<span>的</span>
-					<span>一</span>
-					<span>天</span>
-					<span>开</span>
-					<span>始</span>
-					<span>了</span>
-					</p>
-				</section>
-			</div>
-			<div class="pageview">
-				p2
-			</div>
-			<div class="pageview">
-				p3
-			</div>
-			<div class="pageview">
-				p4
-			</div>
-			<div class="pageview">
-				p5
-			</div>
+<head>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
+	<meta name="Description" content=""/>
+	<meta name="Keywords" content=""/>
+	<title>H5单手横屏操作</title>
+	<link rel="stylesheet" type="text/css" href="css/base.css"/>
+	<link rel="stylesheet" href="css/style.css" />
+</head>
+<body>
+<div class="viewport" id="viewport">
+	<div class="pageview" id="page1">
+		<div class="light1">
+			<img src="img/light1.png"/>
 		</div>
-			  <div class="pagenumber">
-			      <div></div>
-			      <div></div>
-			      <div></div>
-			      <div></div>
-			      <div></div>
-			  </div>
-		
-	</body>
-	<script type="text/javascript">
-		(function(window,document){
-    var currentPosition = 0; //记录当前页面位置
-    var currentPoint = -1;   //记录当前点的位置
-    var pageNow = 1;   //当前页码
-    var points = null; //页码数
+		<div class="light2">
+			<img src="img/light2.png"/>
+		</div>
+		<section class="con">
+			<p>
+				<span>天</span>
+				<span>黑</span>
+				<span>黑</span>
+				<span>，</span>
+				<span>欲</span>
+				<span>落</span>
+				<span>雨</span>
+			</p>
+		</section>
+	</div>
+	<div class="pageview" id="page2">
 
-    var app = {
-        init:function(){
-           document.addEventListener('DOMContentLoaded',function(){
-               points = document.querySelectorAll('.pagenumber div') ;
-               app.bindTouchEvent(); //绑定触摸事件
-               app.setPageNow();     //设置初始页码
-           }.bind(app),false);
-        }(),
+	</div>
+	<div class="pageview" id="page3">
 
-        //页面平移
-        transform:function(translate){
-           this.style.webkitTransform = "translate3d("+translate+"px,0,0)";
-           currentPosition = translate;
+	</div>
+	<div class="pageview" id="page4">
 
-        },
+	</div>
+	<div class="pageview" id="page5">
 
-        /**
-         * 设置当前页码
-         */
-        setPageNow:function(){
-            if (currentPoint != -1){
-                points[currentPoint].className = '';
-            }
-            currentPoint = pageNow - 1;
-            points[currentPoint].className = 'now';
-        },
-
-        /**
-         * 绑定触摸事件
-         */
-        bindTouchEvent:function(){
-           var viewport =  document.querySelector('#viewport');
-           var pageWidth = window.innerWidth; //页面宽度
-           var maxWidth = - pageWidth * (points.length-1); //页面滑动最后一页的位置
-           var startX,startY;
-           var initialPos = 0;  // 手指按下的屏幕位置
-           var moveLength = 0;  // 手指当前滑动的距离
-           var direction = "left"; //滑动的方向
-           var isMove = false; //是否发生左右滑动
-           var startT = 0; //记录手指按下去的时间
-
-           /*手指放在屏幕上*/
-           document.addEventListener("touchstart",function(e){
-               e.preventDefault();
-               var touch = e.touches[0];
-               startX = touch.pageX;
-               startY = touch.pageY;
-               initialPos = currentPosition;   //本次滑动前的初始位置
-               viewport.style.webkitTransition = ""; //取消动画效果
-               startT = new Date().getTime(); //记录手指按下的开始时间
-               isMove = false; //是否产生滑动
-           }.bind(this),false);
-
-           /*手指在屏幕上滑动，页面跟随手指移动*/
-           document.addEventListener("touchmove",function(e){
-               e.preventDefault();
-               var touch = e.touches[0];
-               var deltaX = touch.pageX - startX;
-               var deltaY = touch.pageY - startY;
-               //如果X方向上的位移大于Y方向，则认为是左右滑动
-               if (Math.abs(deltaX) > Math.abs(deltaY)){
-                   moveLength = deltaX;
-                   var translate = initialPos + deltaX; //当前需要移动到的位置
-                   //如果translate>0 或 < maxWidth,则表示页面超出边界
-                   if (translate <=0 && translate >= maxWidth){
-                       this.transform.call(viewport,translate);
-                       isMove = true;
-                   }
-                   direction = deltaX>0?"right":"left"; //判断手指滑动的方向
-               }
-           }.bind(this),false);
-
-           /*手指离开屏幕时，计算最终需要停留在哪一页*/
-           document.addEventListener("touchend",function(e){
-               e.preventDefault();
-               var translate = 0;
-               //计算手指在屏幕上停留的时间
-               var deltaT = new Date().getTime() - startT;
-               if (isMove){ //发生了左右滑动
-                    //使用动画过渡让页面滑动到最终的位置
-                    viewport.style.webkitTransition = "0.3s ease -webkit-transform";
-                    if(deltaT < 300){ //如果停留时间小于300ms,则认为是快速滑动，无论滑动距离是多少，都停留到下一页
-                        translate = direction == 'left'?
-                        currentPosition-(pageWidth+moveLength):currentPosition+pageWidth-moveLength;
-                        //如果最终位置超过边界位置，则停留在边界位置
-                        translate = translate > 0 ? 0 : translate; //左边界
-                        translate = translate < maxWidth ? maxWidth : translate; //右边界
-                    }else {
-                        //如果滑动距离小于屏幕的50%，则退回到上一页
-                        if (Math.abs(moveLength)/pageWidth < 0.5){
-                            translate = currentPosition-moveLength;
-                        }else{
-                            //如果滑动距离大于屏幕的50%，则滑动到下一页
-                            translate = direction == 'left'?
-                            currentPosition-(pageWidth+moveLength):currentPosition+pageWidth-moveLength;
-                            translate = translate > 0 ? 0 : translate;
-                            translate = translate < maxWidth ? maxWidth : translate;
-                        }
-                    }
-                    //执行滑动，让页面完整的显示到屏幕上
-                    this.transform.call(viewport,translate);
-                    //计算当前的页码
-                    pageNow = Math.round(Math.abs(translate) / pageWidth) + 1;
-
-                    setTimeout(function(){
-                        //设置页码，DOM操作需要放到子线程中，否则会出现卡顿
-                        this.setPageNow();
-                    }.bind(this),100);
-                }
-           }.bind(this),false);
-       }
-    }
-})(window,document);
-	</script>
+	</div>
+</div>
+<div class="pagenumber">
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+</div>
+<script src="js/index.js"></script>
+</body>
 </html>
