--- a/h5sign.html
+++ b/h5sign.html
@@ -8,6 +8,9 @@
 	<title>H5单手横屏操作</title>
 	<link rel="stylesheet" type="text/css" href="css/base.css"/>
 	<link rel="stylesheet" href="css/style.css" />
+	<style>
+
+	</style>
 </head>
 <body>
 <div class="viewport" id="viewport">
